# intelligence

./: .gitignore  CMakeLists.txt  assumptions.txt  build.sh  engine  imgui.ini  key-parts.txt  requirements.txt  universe  universe.cpp
include/glad/: glad.h
scripts/: crafter.sh  quickstart.sh  setup.sh  verify_dreamer.sh
src/: engine.cpp  glad.c
